fix: z-index value in z-searchbar

--- a/src/components/inputs/z-searchbar/styles.css
+++ b/src/components/inputs/z-searchbar/styles.css
@@ -1,5 +1,5 @@
 :host {
-  z-index: 10;
+  z-index: 30;
   display: flex;
   column-gap: calc(var(--space-unit) * 2);
   font-family: var(--font-family-sans);
